--- a/drow.ipynb
+++ b/drow.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div dir=\"rtl\">\n",
     "## بسم‌الله الرحمن الرحیم  \n",
     "**امیرحسین بینائی شهری**  \n",
     "تابستان ۱۴۰۴  \n",
@@ -75,7 +76,8 @@
     "---\n",
     "\n",
     "امید است این پروژه برای علاقه‌مندان به تعامل‌های تصویری و طراحی دیجیتال مفید باشد.  \n",
-    "پیشنهادات و بهبودها با آغوش باز پذیرفته می‌شود. ❤️\n"
+    "پیشنهادات و بهبودها با آغوش باز پذیرفته می‌شود. ❤️\n",
+    "</div>"
    ]
   },
   {
